--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MVC-tech-blog",
+  "name": "mvc-tech-blog",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -21,9 +21,13 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.1",
-    "express-handlebars": "^5.3.0",
+    "dotenv": "^9.0.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
     "express-session": "^1.17.1",
+    "handlebars": "^4.7.7",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
-  }
+  },
+  "devDependencies": {}
 }
